<resources>
    <string name="app_name">mobile library</string>
    <string name="footer">mobile library ⓒJ911</string>
    <string name="student_id">student id</string>
    <string name="student_name">student name</string>
    <string name="student_password">student password</string>
    <string name="signin">signin</string>
    <string name="signup">signup</string>
    <string name="signout">signout</string>
    <string name="cancel">cancel</string>
    <string name="reserve">reserve</string>
    <string name="request">request</string>
    <string name="session">Session</string>
    <string name="done">done</string>
    <string name="login_require">please signin</string>
    <string name="account_conflict">account conflict</string>
    <string name="account_not_found">account not found</string>
    <string name="account_no_mached_password">no matched password</string>
    <string name="error">error</string>
    <string name="hello">hello</string>
    <string name="successed_signup">successed signup</string>
    <string name="bad_inputs">bad inputs</string>
    <string name="reserved_seat">Reserved Seat</string>
    <string name="reserved_available">Reserved Available</string>
    <string name="empty_seat_msg">Empty seat</string>
    <string name="no_permission_msg">No permission</string>
    <string name="cancel_reservation_msg">canceled reservation</string>
    <string name="reserved_msg">Already reserved</string>
    <string name="reserve_msg">reserved seat</string>
</resources>
