<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/JoinStdId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/student_id" />

    <EditText
        android:id="@+id/JoinStdName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/student_name" />

    <EditText
        android:id="@+id/JoinStdPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/student_password" />
    <Button
        android:id="@+id/JoinSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup" />
</LinearLayout>